--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: postgres:latest
     container_name: postgres_local
     restart: always
+    networks:
+      - app_network
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
@@ -13,6 +15,25 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  adminer:
+    image: adminer:latest
+    container_name: adminer_local
+    restart: always
+    networks:
+      - app_network
+    environment:
+      ADMINER_DEFAULT_SERVER: postgres
+      ADMINER_DESIGN: pepa-linha
+      ADMINER_PLUGINS: tables-filter tinymce
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+
+networks:
+  app_network:
+    driver: bridge
 
 volumes:
   postgres_data:
