--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "@react-google-maps/api": "^2.20.6",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
+    "@types/cors": "^2.8.17",
     "@types/google.maps": "^3.58.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
@@ -69,6 +71,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
+    "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.1.0",
@@ -95,7 +98,7 @@
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
     "@types/node": "20.16.11",
