fix session bug

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://myuser:mypassword@localhost:5432/mydatabase
+DATABASE_URL=postgresql://myuser:mypassword@127.0.0.1:15432/mydatabase
 SESSION_SECRET=MonMdpDBEst1985+
